# lofar-antenna-positions

./: .readthedocs.yaml  .travis.yml  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
docs/: requirements.txt
docs/source/: conf.py
lofarantpos/: geo.py  plotutil.py
src/lofarantpos/: __init__.py  db.py  geo.py  plotutil.py
src/lofarantpos/share/lofarantpos/: etrs-antenna-positions.csv  lora_detectors.csv
test/: conftest.py
